force-app/main/default/objects/Bingo_Player__c/Bingo_Player__c.object-meta.xml
<CustomObject>
    <description>A participant, keyed by email. Written once and never updated: guest users cannot perform UPDATE.</description>
    <label>Bingo Player</label>
    <nameField><displayFormat>BP-{00000}</displayFormat><label>Player Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Bingo Players</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>