force-app/main/default/objects/Bingo_Player__c/fields/Consented__c.field-meta.xml
<CustomField>
    <fullName>Consented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consented</label>
    <type>Checkbox</type>
</CustomField>