force-app/main/default/objects/Bingo_Player__c/fields/Consented_At__c.field-meta.xml
<CustomField>
    <fullName>Consented_At__c</fullName>
    <label>Consented At</label>
    <type>DateTime</type>
</CustomField>