force-app/main/default/objects/Bingo_Player__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Lowercased email. Unique so a returning player cannot create a second row — the duplicate insert is caught and the existing row reused.</description>
    <externalId>true</externalId>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>